(implement foundation for macros and special syntax, unfinished)

--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 - proper \r\n handling
 - protect against stack overflows during parsing and pretty-printing?
 - lilyParse: report begin of erroneous elements instead of end
+- make data structure const where applicable
