--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@
 - make data structure const where applicable
 - change continuations data structure into an intrusive list or more optimized pure stack
 - use LETU_AS instead of LET_AS in places where it's safe, check performance difference
+- provide an interface hierarchy separate from implementation?
